minor changes to writing

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -58,7 +58,8 @@ $$prediction \; accuracy = \frac{number \; of  \; correct  \; predictions}{total
 
 This process for assessing if our predictions match the true labels in the 
 test set is illustrated in Figure \@ref(fig:06-ML-paradigm-test).
-Note that there are other measures for how well classifiers perform, such as *precision* and *recall*; 
+
+> Note that there are other measures for how well classifiers perform, such as *precision* and *recall*; 
 these will not be discussed here, but you will likely encounter them in other more advanced
 books on this topic. 
 
@@ -66,7 +67,7 @@ books on this topic.
 knitr::include_graphics("img/ML-paradigm-test.png")
 ```
 
-In R, we can use the `tidymodels` library collection not only to perform $K$-nearest neighbors
+In R, we can use the `tidymodels` package not only to perform $K$-nearest neighbors
 classification, but also to assess how well our classification worked. Let's
 work through an example of this process using the breast cancer data set.
 We start by loading the necessary libraries, reading in the breast cancer data
@@ -155,8 +156,8 @@ train_prop <- cancer_train |>
 ```
 
 We can use `group_by` and `summarize` to find the proportion of malignant and benign classes 
-in `cancer_train` and we see `r round(filter(train_prop, Class == "B")$proportion, 3)*100`% of the training
-data are benign and `r round(filter(train_prop, Class == "M")$proportion, 3)*100`% 
+in `cancer_train` and we see about `r round(filter(train_prop, Class == "B")$proportion, 2)*100`% of the training
+data are benign and `r round(filter(train_prop, Class == "M")$proportion, 2)*100`% 
 are malignant indicating that our class proportions were roughly preserved when we split the data.
 
 ```{r 06-train-proportion}
